docs: update README with Docker infrastructure and Kerberos setup
- Fix stale tool counts: 141+ → 226+, 50 → 64 inspectors (6 places)
- Add "External Infrastructure (Docker)" section: 13 services table
  with ports and inspector coverage mapping
- Add "Kerberos KDC Setup" section: realm, principals, keytab,
  JVM --add-opens flags and krb5.conf requirement
- Update "Run the demo" to include `docker compose up -d` step
  and Kerberos JVM flags
- Add demo questions for Kerberos, RabbitMQ, RocketMQ, Nacos,
  Cassandra, Seata, Zookeeper, Camel inspectors
- Add docker/ and docker-compose.yml to project structure tree

Co-Authored-By: ggcode <noreply@ggcode.dev>